# NinjaBooster

./: README.md  deps.py  ninja_booster.py  ninja_deps.py  strace_ninja.py
legacy/: deps.py  strace_ninja.py
test/: CMakeLists.txt
test/not_used_inc/: not_used.hpp
test/src/: calculator.cpp  main.cpp
test/used_inc/: possibly_not_used.hpp  used.hpp
